fixed alignment issues

--- a/otherProjs/CarPoolingRoute/css/listTest.css
+++ b/otherProjs/CarPoolingRoute/css/listTest.css
@@ -5,7 +5,6 @@
   flex-wrap: wrap;
   align-items:flex-start;
   justify-content: flex-start;
-  position: fixed;
   overflow: auto;
   width: 100%;
   height: 700px;
@@ -16,15 +15,11 @@
 #searchBar {
   padding-bottom: 12px;
 }
-#mapSearch {
-  height: 100px;
-  width: 100%;
-  background-color: grey;
-}
 #pageWrapper {
   display: flex;
   flex-flow: column;
   justify-content: flex-start;
+  height: 100%;
 }
 
 .controls {
